Adding FO messaging

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,13 +1,13 @@
 <p style="text-align: left;">
-The mission of FDC3 is to develop specific protocols and taxonomies to advance the ability of desktop applications in financial workflows to interoperate in a plug-and-play fashion and without prior, bi-lateral agreements. <a href="https://github.com/FDC3/FDC3" target="_blank" rel="noopener">Read the Charter.</a>
+The Financial Objects program was formed to drive adoption of new and existing Financial Object Standards across the Financial Services Industry, through a FINOS Program that brings together creators of Financial Objects with users of Financial Objects. Standardization of Financial Objects is valuable to the Financial Services industry because it will lower integration and transaction costs, simplify processing across organizational boundaries, enable the mutualization of commodity software for handling these objects, and improve the discoverability of data and overall interpretability and readiness for data analysis tools. <a href="#" target="_blank" rel="noopener">Read the Charter.</a>
 </p>
 
 <p style="text-align: left;">
-The FDC3 was launched in October 2017 by OpenFin in collaboration with major industry participants. FDC3 includes representatives from over 40 major banks, buy-side firms and financial services platforms. The FDC3 uses the Apache 2.0 open source license for all deliverables.
+The Finacial Objects Program was launched in July 2018
 </p>
 
 <p style="margin-bottom: 5%; text-align: left;">
-FDC3 is hosted within, and governed by the policies of, the <a href="http://finos.org">Fintech Open Source Foundation</a> (FINOS). FINOS is an independent nonprofit organization focused on promoting open innovation within financial services.
+Financial Objects is hosted within, and governed by the policies of, the <a href="http://finos.org">Fintech Open Source Foundation</a> (FINOS). FINOS is an independent nonprofit organization focused on promoting open innovation within financial services.
 </p>
 
 <button type="button" class="btn btn-primary">In the News</button>
