--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -13,18 +13,18 @@
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://fdc3-use-cases.finos.org">Use Cases</a>
+          <a class="nav-link" href="#">Financial Objects Use Cases</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" >Standards</a>
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" >Objects</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown=item" href="#">API</a>
+            <a class="dropdown=item" href="#">Trade Object</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown=item" href="#">App Directory</a>
+            <a class="dropdown=item" href="#">RFQ Object</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown=item" href="https://fdc3-context-data.finos.org">Context Data</a>
+            <a class="dropdown=item" href="#">Order Object</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown=item" href="https://fdc3-intents.finos.org">Intents</a>
+            <a class="dropdown=item" href="#">Basic Objects</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -59,7 +59,7 @@
 <div id="homepage-intro">
   <div class="intro-block">
     <span class="logo">
-      <img src="/assets/img/FDC3_logo-close-crop.png" class="alternate" alt="" title="" class="logo-spacing"/>
+      <img src="/assets/img/Financial-Objects.gif" class="alternate" alt="" title="" class="logo-spacing"/>
     </span>
     {% unless page.hidebanner %}
       {% include banner.html %}
