--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -22,3 +22,155 @@ header.postHeader:empty {
   header.postHeader:empty + article h1 {
     margin-top: 0;
   }
+
+  .imageAlignTop .blockImage {
+    max-width: 100px;
+  }
+  
+  
+  
+  .productShowcaseSection .logos img {
+    width: 200px;
+  }
+  
+  .showcaseSection .logos img {
+    width: 250px;
+  }
+  
+  .showcase {
+    align-items: center;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    padding: 20px;
+  }
+  
+  .showcase img {
+    width: 250px;
+    max-height: 150px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  
+  .finos {
+    padding-top: 30px; /* CHANGED 14 MAY 2019 */
+    padding-bottom: 30px;
+    text-align: center;
+  }
+  
+  .userShowcase p {
+    max-width: 60%;
+  }
+  
+  /* CSS added 14 May 2019 */
+  
+  .navigationSlider .slidingNav ul {
+    background: #0086bf;  /* DO NOT CHANGE - THIS IS THE NAVIGATION BACKGROUND - SHOULD STAY FINOS BLUE */
+    box-sizing: border-box;
+    color: #fff;
+    display: flex;
+    flex-wrap: nowrap;
+    list-style: none;
+    padding: 0;
+    width: 100%;
+  }
+  
+  .navigationSlider .slidingNav ul li a:hover {
+    background: #0086bf;  /* DO NOT CHANGE - THIS IS THE NAVIGATION BACKGROUND - SHOULD STAY FINOS BLUE */
+  
+  }
+  
+  
+  body {
+    color: #333333;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+      sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-size: 16px;
+    line-height: 1.5;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    word-wrap: break-word;
+  }
+  
+  .inner img{
+    width: 25%;
+  }
+  
+  .homeContainer {
+    background-image: url("../img/fo-background.png"); /* CHANGE THIS TO BACKGROUND LOGO PNG - THIS IS A SEMI-TRANSPARENT DOUBLE RENDERING OF THE LOGO ICON */
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #F49231; /* CHANGE THIS TO PRIMARY PROJECT COLOR */
+  }
+  
+  .homeContainer h2{
+    color: #ffffff;
+  }
+  
+  .homeContainer a{
+    color: #ffffff;
+  }
+  
+  .button {
+    border: 1px solid #ffffff;
+  }
+  
+  .mainContainer {
+    padding: 0 0;
+  }
+  
+  .blockImage img{
+    fill: #ffffff;
+  }
+  
+  .blockContent h2{
+    color:  #0086bf;  /* DO NOT CHANGE - THIS IS THE TITLE UNDER THE ICONS IN THE 3RD BLOCK - SHOULD STAY FINOS BLUE */
+  }
+  
+  
+  .featureShowcaseSection .logos img {
+    width: 200px;
+  }
+  
+  .featureShowcaseSection h2{
+    color: #F49231; /* CHANGE THIS TO PRIMARY PROJECT COLOR */
+    font-size: 30px;
+  }
+  
+  .featureShowcaseSection {
+    background-color: #F7F7F7; /* CHANGE THIS TO PRIMARY PROJECT COLOR */
+    padding-top: 10px;
+    padding-bottom: 40px;
+  }
+  
+  .productShowcaseSection h2{
+    color: #F49231; /* CHANGE THIS TO PRIMARY PROJECT COLOR */
+  }
+  
+  
+  .finosBanner {
+    background-color: #0086bf; /* DO NOT CHANGE - THIS IS THE FINOS BANNER BACKGROUND - SHOULD STAY FINOS BLUE */
+    margin: 0 auto;
+    padding: 0 0;
+  }
+  
+  .finosBanner h2{
+    color: #ffffff;
+    font-size: 16px;
+  }
+  
+  article p img,
+  article iframe {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
+  }
+  
+  .nav-footer {
+    background-color: #0086bf;
+  }
+  
+  .nav-footer .sitemap{
+    margin: 0 auto 1em;
+  }
