--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,5 +1,7 @@
 /* your custom css */
 
+.imageAlignSide .blockImage { flex: > 0 0 150px; max-width: 150px; }
+
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
 }
 
